--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
-script: pytest
+script: 
+  - py.test -v --color=yes
